bugfix: Click emoji selector - tap Stickers - sticker packs logos distorted by width

--- a/src/Components/Message/Media/Sticker.css
+++ b/src/Components/Message/Media/Sticker.css
@@ -16,7 +16,7 @@
 .sticker-image {
     user-select: none;
     display: block;
-    width: 100%;
+    width: auto;
     height: 100%;
     object-fit: cover;
     object-position: center;
